@@ -1,7 +1,6 @@
 package view.terminal;
 
-import java.util.List;
-
+import config.FlatType;
 import model.BTOProject;
 import model.User;
 import view.interfaces.BTOProjectView;
@@ -12,19 +11,52 @@ import view.interfaces.BTOProjectView;
  *
  */
 public class TerminalBTOProjectView extends AbstractTerminalView implements BTOProjectView{
+    public void showBTOProjectDetailRestricted(BTOProject btoProject){
+        showTitle("BTO Project Detail");
+        System.out.println("""
+                Name                  : %s
+                Neighborhood          : %s
+                Application Period    : %s - %s
+                -------------------------------------------
 
-    /**
-     * Displays a list of BTO projects in the terminal.
-     * Each project is shown with an index and its name.
-     *
-     * @param btoProjects the list of {@link BTOProject} instances to display.
-     */
-    public void showBTOProjects(List<BTOProject> btoProjects){
-        showTitle("BTO Project List");
+                %s
+                -------------------------------------------
+                Manager               : %s
+                Officers              : %s
+                """.formatted(
+                    btoProject.getName(), 
+                    btoProject.getNeighborhood(), 
+                    btoProject.getOpeningDate(), 
+                    btoProject.getClosingDate(),
+                    getFlatDetailString(btoProject),
+                    btoProject.getHDBManager().getName(),
+                    getHDBOFficerString(btoProject)
+                ));
+    }
 
-        for(int i=0; i<btoProjects.size(); i++){
-            System.out.println(String.format("%d. %s", i+1, btoProjects.get(i).getName()));
+    private String getFlatDetailString(BTOProject btoProject){
+        StringBuilder sb = new StringBuilder();
+
+        sb.append("All Flats: \n\n");
+
+        for(FlatType flatType:FlatType.values()){
+            sb.append("%s\n".formatted(
+               flatType.getStoredString() 
+            ));
+
+            sb.append("Number      : %d\n".formatted(
+                btoProject.getFlatNum(flatType))
+            );
+
+            sb.append("Price       : %d\n".formatted(
+                btoProject.getFlatPrice(flatType))
+            );
+
+            sb.append("Eligible if : \n%s\n".formatted(
+                flatType.getEligibilityDetail()
+            ));
         }
+        return sb.toString();
     }
 
     /**
@@ -35,11 +67,46 @@ public class TerminalBTOProjectView extends AbstractTerminalView implements BTOP
      *
      * @param btoProject the {@link BTOProject} instance to display.
      */
-    public void showBTOProject(BTOProject btoProject){
+    public void showBTOProjectDetailFull(BTOProject btoProject){
         showTitle("BTO Project Detail");
-        System.out.println(btoProject.toString());
-        for(User user:btoProject.getHDBOfficers()){
-            System.out.println(user.getName());
+        System.out.println("""
+                Name                  : %s
+                Neighborhood          : %s
+                Application Period    : %s - %s
+                -------------------------------------------
+
+                %s
+                -------------------------------------------
+                Manager               : %s
+                Number of Officers    : %d / %d
+                Officers              : %s
+                Visibility            : %s
+                """.formatted(
+                    btoProject.getName(), 
+                    btoProject.getNeighborhood(), 
+                    btoProject.getOpeningDate(), 
+                    btoProject.getClosingDate(),
+                    getFlatDetailString(btoProject),
+                    btoProject.getHDBManager().getName(),
+                    btoProject.getHDBOfficers().size(),
+                    btoProject.getHDBOfficerLimit(),
+                    getHDBOFficerString(btoProject),
+                    btoProject.isVisible() ? "Visible" : "Hidden"
+                ));
+    }
+
+    private String getHDBOFficerString(BTOProject btoProject){
+        StringBuilder sb = new StringBuilder();
+
+        for(User officer:btoProject.getHDBOfficers()){
+            sb.append(officer.getName()).append(", ");
         }
+
+        if(sb.length() == 0){
+            return "No officers in charge";
+        }
+
+        sb.setLength(sb.length() - 2);
+        return sb.toString();
     }
 }
